# simple-bank-management

Test6/: Account_info.txt  BankFunctions.cpp  BankFunctions.h  Bank_Record.txt  Main.cpp  display.cpp  display.h  temp.txt
code4/: Money_Bank_System.cpp
code5/: ATMSystem.cpp  ATMSystem.h  Admin.cpp  Admin.h  CMakeLists.txt  User.cpp  User.h  main.cpp
